[gd_scene load_steps=4 format=3 uid="uid://pause_menu_scene"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="1_pause_menu"]

[sub_resource type="LabelSettings" id="LabelSettings_paused"]
font_size = 64
font_color = Color(1, 1, 1, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 0.8)

[sub_resource type="LabelSettings" id="LabelSettings_button"]
font_size = 32
font_color = Color(1, 1, 1, 1)

[node name="PauseMenu" type="CanvasLayer"]
layer = 10
process_mode = 3
script = ExtResource("1_pause_menu")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)
mouse_filter = 0

[node name="MenuContainer" type="VBoxContainer" parent="Overlay"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PausedLabel" type="Label" parent="Overlay/MenuContainer"]
mouse_filter = 2
horizontal_alignment = 1
vertical_alignment = 1
text = "PAUSED"
label_settings = SubResource("LabelSettings_paused")

[node name="ResumeButton" type="Button" parent="Overlay/MenuContainer"]
custom_minimum_size = Vector2(0, 64)
mouse_filter = 0
text = "Resume"
alignment = 1

[node name="RestartButton" type="Button" parent="Overlay/MenuContainer"]
custom_minimum_size = Vector2(0, 64)
mouse_filter = 0
text = "Restart"
alignment = 1

[node name="QuitButton" type="Button" parent="Overlay/MenuContainer"]
custom_minimum_size = Vector2(0, 64)
mouse_filter = 0
text = "Quit"
alignment = 1
